# yabaitech_tokyo_vol_1

./: .gitignore  .gitmodules  Makefile  README.md  Satyristes  local.satyh  main.saty  yabai2018a.opam
MasWag/: Makefile  article.satyh  automata.satyh  bib.satyh  bib.xml  conclusion.satyh  cs-thesis.satyh  introduction.satyh  local-standalone.satyh  local.satyh  lstar.satyh  main.saty  rnnlstar.satyh  standalone.saty
MasWag/figs/: evenDFA.tex  evenTree.tex  evenTreeMerged.tex
MasWag/markdown/: automata.md  conclusion.md  introduction.md  lstar.md  rnnlstar.md
MasWag/pandoc/: satysfi.lua  satysfi.template.m4
gfn/: advanced-command-definition.satyh  alias-command-definition.satyh  bib.satyh  book-class.satyh  book.saty  cross-reference.satyh  dummy-0.satyh  dummy-1.satyh  errata.saty  future-work.satyh  getting-started.satyh  graphics.satyh  introduction.satyh  line-breaking.satyh  overall.satyh  page-breaking.satyh  preface.satyh  primitives.txt  programming.satyh  settings.satyh  specification.satyh  system-and-config.satyh  term.satyh  typography.satyh
gfn/old/: gen_code.rb
main/: bib.satyh  book-class.satyh  cs-thesis.satyh  local.satyh  sample.saty  template.saty
pohe/: article.satyh
postscript/: article.satyh
src/: template.saty
src/MasWag/: article.satyh
src/pohe/: article.satyh
src/wasabiz/: article.satyh
src/zpt/: article.satyh
wasabiz/: article.satyh  bib.satyh  local.satyh  manuscript.saty
wasabiz/acryl/: a.c  a.s  acryl.c  acryl.h  compile.ss
zpt/: article.satyh  bib.satyh  derivation-rules.satyh  moreproof.satyh  zpt-math.satyh
